training/logs/yolo_5815920.err
  File "<string>", line 1
    import torch; print(CUDA:, torch.cuda.is_available())
                            ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/u/fkm5yp/rustdetection/train_yolo.py", line 1, in <module>
    from ultralytics import YOLO
ModuleNotFoundError: No module named 'ultralytics'
tr: missing operand
Try 'tr --help' for more information.
